# nobuco

./: .gitignore  LICENSE  MANIFEST.in  README.md  experimental.ipynb  pyproject.toml  requirements.txt  unittest.sh  unittest_template.ipynb
.github/workflows/: python_tests.yml
docs/: converter_inside_converter1.html  converter_inside_converter2.html  dynamic_shape1.html  dynamic_shape2.html  essentials1.html  essentials2.html  essentials3.html  fusion2.html  inplace1.html  inplace2.html  inplace3.html  tracing1.html  tracing2.html
examples/: bert.py  broadcast.py  channel_ordering.py  complex.py  control_for.py  control_if.py  control_if2.py  control_while.py  conv_depthwise_tfjs.py  conv_grouped.py  converter_inside_converter.py  create_tensor.py  dense_image_warp.py  dense_image_warp2.py  detr.py  distance.py  dynamic_shape.py  efficient_reshape.py  fourier.py  fusible.py  grad.py  grid_samplers.py  instructor.py  locate_converter.py  math_ops.py  meshgrid.py  module_deepcopy.py  multihead-attention.py  nms.py  norm.py  norm2_example.py  norm_example.py  paddings.py  pixelshuffle.py  projection.py  quant.py  reduce.py  repeat.py  resnet50_fpn.py  rnn.py  (+19 more)
examples/mamba_minimal/: convert.py  model.py
examples/stablelm_zephyr/: convert.py  run_pt.py  run_tf.py  util.py
nobuco/: __init__.py  commons.py  convert.py  funcs.py  locate.py  util.py
nobuco/convert/: converter.py  validation.py
nobuco/converters/: channel_ordering.py  impl.py  node_converter.py  scalars_to_tensors.py  tensor.py  type_cast.py  (+1 more)
pytorch2keras/: commons.py  funcs.py  util.py
(+66 files in other folders)
